<resources>
    <string name="app_name">Outils-Maths</string>

    <!-- String related to actions -->
        <string name="action_ok">OK</string>
        <string name="action_cancel">Annuler</string>
        <string name="action_calcul">Calcul</string>
        <string name="action_reset">Réinitialiser</string>
        <string name="action_add">Ajouter</string>

    <!-- String related to errors -->

        <string name="error_input">Vous devez saisir une valeur numérique</string>
        <string name="proba_interval_error">Les valeurs de l\'interval ne sont pas correctes</string>

    <!-- String related to Home Activity -->
        <string name="home_activity_title">Accueil</string>

    <!-- String related to Polynome Activity -->
        <string name="polynome_activity_title">Polynômes</string>
    
        <string name="polynome_activity_second_ordre">Second degré</string>
    
        <string name="polynome_activity_hint_a" translatable="false">a</string>
        <string name="polynome_activity_hint_b" translatable="false">b</string>
        <string name="polynome_activity_hint_c" translatable="false">c</string>
        <string name="polynome_activity_hint_d" translatable="false">d</string>
        <string name="polynome_activity_equation" translatable="false">= 0</string>
        <string name="polynome_activity_hint_image_X2" translatable="false">X au carré</string>
        <string name="polynome_activity_hint_image_X" translatable="false">X</string>
        <string name="polynome_activity_delta_formule" translatable="false">Delta =  b²-4ac </string>
        <string name="polynome_activity_calcul_delta">Calcul du discriminant</string>
        <string name="polynome_activity_delta_ope" translatable="false">Delta = %1.3f² - (4 x  %2.3f x %3.3f)</string>
        <string name="polynome_activity_delta_resultat" translatable="false">Delta = %1.3f</string>
        <string name="polynome_activity_calcul_solutions">Calcul des solutions</string>
        <string name="polynome_activity_calcul_solutions_X1" translatable="false">X1 = %1.3f</string>
        <string name="polynome_activity_calcul_solutions_X2" translatable="false">X2 = %1.3f</string>
        <string name="polynome_activity_facorisation">Factorisation</string>
        <string name="polynome_activity_zero_solution">Il n\'existe pas de solutions possibles pour cette équation</string>

        <string-array name="signe_operatoire_spinner" translatable="false">
            <item>+</item>
            <item>-</item>
        </string-array>
    
        <string name="polynome_activity_troisieme_ordre">Troisième ordre</string>

    <!-- String related to Statistique Activity -->
    <string name="statistique_activity_title">Séries statistiques</string>
        <string name="statistique_activity_moyenne">Moyenne :</string>
        <string name="statistique_activity_ecarttype">Écart type :</string>
        <string name="statistique_ativity_mode">Mode :</string>
        <string name="statistique_activity_mediane">Médiane :</string>
        <string name="statistique_activity_delete_value">Voulez vous supprimer cette valeur ? </string>
        <string name="statistique_activity_change_value">Voulez vous modifier cette valeur ?</string>
        <string name="statistique_btn_proba_normale">Loi Normale</string>

    <!-- String related to Somme_Proba Activity -->

        <string name="proba_activity_title">Probabilités</string>
    
        <string name="proba_uniforme">Loi Uniforme</string>
        <string name="proba_binomiale">Loi Binomiale</string>
        <string name="proba_poisson">Loi de poisson</string>
        <string name="proba_normale">Loi Normale</string>
        <string name="proba_khi">Test de Khi</string>

        <string name="proba_esperance">Espérance :</string>
        <string name="proba_variance" translatable="false">Variance :</string>
        <string name="proba_ecart_type">Ecart_Type : </string>
        <string name="proba_function" translatable="false">P(X = K) = </string>
        <string name="proba_interval">Sur un intervalle de :</string>
        <string name="proba_fonction_repartition">Foncion de répartition :</string>
        

            
            <string name="proba_binomiale_n">Nombre d\'expériences réalisées :</string>
            <string name="proba_binomiale_n_hint" translatable="false">n</string>
            <string name="proba_binomiale_p">Probabilités de succès :</string>
            <string name="proba_binomiale_p_hint" translatable="false">p</string>
            <string name="proba_binomiale_k">Nombre de réussites:</string>
            <string name="proba_binomiale_k_hint" translatable="false">k</string>

            <string name="proba_binomiale_kMin_hint" translatable="false">KMin</string>
            <string name="proba_binomiale_KMax_hint" translatable="false">KMax</string>


            <string name="proba_poisson_lambda">Nombre moyen d\'occurences</string>
            <string name="proba_poisson_lambda_hint" translatable="false">Lambda</string>
            <string name="proba_poisson_k">Nombres d\'occurences</string>
            <string name="proba_poisson_k_hint" translatable="false">k</string>
            <string name="proba_poisson_kMin_hint" translatable="false">KMin</string>
            <string name="proba_poisson_KMax_hint" translatable="false">KMax</string>

            <string name="proba_normale_esperance">Espérance</string>
            <string name="proba_normale_esperance_hint">Espérance</string>
            <string name="proba_normale_ecarttype">Écart-type</string>
            <string name="proba_normale_ecarttype_hint">Écart-type</string>
            <string name="proba_normale_kMin_hint" translatable="false">KMin</string>
            <string name="proba_normale_KMax_hint" translatable="false">KMax</string>

            <string name="proba_uniforme_n">Nombre de valeurs possible :</string>
            <string name="proba_uniforme_n_hint" translatable="false">n</string>
            <string name="proba_uniforme_a">Valeur minimale de l\'interval :</string>
            <string name="proba_uniforme_a_hint" translatable="false">a</string>
            <string name="proba_uniforme_b">Valeur maximale de l\'interval : </string>
            <string name="proba_uniforme_b_hint" translatable="false">b</string>
            <string name="proba_uniforme_btn_discrete">Loi discrète</string>
            <string name="proba_uniforme_btn_continue">Loi continue</string>
            <string name="proba_uniforme_proba">Probabilité :</string>

    <!-- String related to Matrice Activity -->
        <string name="matrice_activity_title">Calculs matriciels</string>
            <string name="matrice_row">Lignes de la matrice</string>
            <string name="matrice_col">Colonnes de la matrice</string>
            <string name="matrice_erreurs">Tous les valeurs doivent êtres renseignées </string>
            <string name="matrice_btn_inverce">Inverse</string>
            <string name="matrice_inverce_error">La matrice doit être carée</string>
            <string name="matrice_inverce_determinant_error">La matrice n\'est pas inversible </string>

    <!-- String related to the navigation drawer -->
        <string name="nav_drawer_open">Ouvrir le menu de navigation</string>
        <string name="nav_drawer_close">Fermer le menu de navigation</string>
        <string name="nav_drawer_grp_defaut_home">Accueil</string>
</resources>
