<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_drawer_grp_default"
        android:checkableBehavior="single"
        android:orderInCategory="0">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_drawer_grp_defaut_home"
            android:icon="@drawable/ic_home_black_24dp"/>
    </group>

    <group
        android:id="@+id/nav_drawer_grp_ope"
        android:checkableBehavior="single"
        android:orderInCategory="1">
        <item
            android:id="@+id/nav_polynome"
            android:title="@string/polynome_activity_title"
            android:icon="@drawable/ic_icon_polynome">
        </item>
        <item
            android:id="@+id/nav_stat"
            android:title="@string/statistique_activity_title"
            android:icon="@drawable/ic_icon_analytics">
        </item>
        <item
            android:id="@+id/nav_proba"
            android:title="@string/proba_activity_title"
            android:icon="@drawable/ic_icon_probability">
        </item>

        <item
            android:id="@+id/nav_matrice"
            android:title="@string/matrice_activity_title"
            android:icon="@drawable/ic_icon_matrix">
        </item>
    </group>
</menu>
